kube/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match:   Host(`dashboard.buildmyauction.com`)
      priority: 10
      services:
        - kind: Service
          name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 443
          serversTransport: kubernetes-dashboard-transport
  tls:
    secretName: kubernetes-dashboard-tls
    domains:
      - main:  dashboard.buildmyauction.com
        sans:
          - dashboard.buildmyauction.com
